docs/styles/index.css
.hero {
  flex-grow: 1;
  display: grid;
  grid-template-columns: 1fr;
  place-content: center;
  gap: 4rem;
}
@media screen and (min-width: 800px) {
  .hero {
    grid-template-columns: 1fr 1fr;
  }
}
.hero .title {
  color: var(--primary);
  margin-bottom: 1rem;
}
.hero .subtitle {
  color: rgb(61, 61, 61);
  margin-bottom: 2rem;
}

.hero .images {
  display: flex;
  justify-content: center;
}
.hero .images:hover > .image {
  animation-play-state: paused;
  filter: grayscale(100%);
}
.hero .images .image:hover {
  filter: none;
}
.hero .images .image {
  cursor: pointer;
  width: 150px;
  height: 200px;
  border-radius: 0.5rem;
  box-shadow: 2px 2px 4px 2px hsla(0, 0%, 0%, 0.1);
  transition: 250ms ease-out;
  overflow: hidden;
  animation: bounce 2500ms alternate-reverse infinite;
}
.hero .images .image img {
  display: block;
  height: 100%;
  object-fit: cover;
}
@keyframes bounce {
  from {
    transform: translateY(10px);
  }
  to {
    transform: translateY(0px);
  }
}
.hero .images .image:nth-child(1) {
  rotate: -15deg;
  translate: 30px 30px;
  z-index: 1;
}
.hero .images .image:nth-child(1):hover {
  translate: 20px 10px;
}
.hero .images .image:nth-child(2) {
  translate: 0px 0px;
  z-index: 2;
}
.hero .images .image:nth-child(2):hover {
  translate: 0px -20px;
}
.hero .images .image:nth-child(3) {
  rotate: 15deg;
  translate: -30px 30px;
  z-index: 1;
}
.hero .images .image:nth-child(3):hover {
  translate: -20px 10px;
}

.hero .actions {
  display: flex;
  gap: 1rem;
}
.hero .actions .action {
  display: block;
  padding: 1rem 1.5rem;
  font-size: 0.8rem;
  border: none;
  outline: none;
  border-radius: 0.25rem;
  background-color: transparent;
  cursor: pointer;
}
.hero .actions .action.action-primary {
  background: var(--primary);
  color: white;
  transition: background-color ease-out 200ms;
}
.hero .actions .action.action-primary:hover {
  background-color: var(--primary-light);
}

.header {
  border-bottom: 1px solid var(--structure);
}
.header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}
.header .logo-container .logo {
  color: var(--primary);
}
.header .link-container {
  list-style: none;
  display: flex;
  gap: 1rem;
  padding: 0;
  margin: 0;
}
.header .link-container .link a {
  font-size: 1rem;
}
.header .link-container .link-selected a {
  color: var(--primary);
}

* {
  box-sizing: border-box;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  --bg-color: rgb(245, 245, 245);
  --fg-color: rgb(22, 22, 22);
  --fg-secondary: rgb(36, 36, 36);
  --primary: rgb(12, 12, 61);
  --primary-light: rgb(37, 37, 184);
  --structure: rgb(207, 207, 207);
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--bg-color);
  color: var(--fg-color);
}

a {
  text-decoration: none;
  color: var(--fg-secondary);
}

img {
  width: 100%;
}

.container {
  margin: auto auto;
  max-width: 1200px;
  width: 100%;
  padding: 0rem 1rem;
}

.page-height {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

/*# sourceMappingURL=index.css.map */

